--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -5,10 +5,26 @@
   <title>
     <%= title %>
   </title>
- 
+  <link rel="icon" href="../images/breadcrumb-1.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/notion.css">
 </head>
 
 <body>
+
+    <% include breadcrumb.ejs%>
+    <div class="app-notion">
+        <% include body-p1.ejs%>
+        <% include body-p2.ejs%>
+        <% include body-p3.ejs%>
+        <% include body-p4.ejs%>
+        <% include body-p5.ejs%>
+        <% include body-p6.ejs%>
+        <% include body-p7.ejs%>
+       
+       
+    </div>
+
+
 
 </body>
 
