--- a/web/views/all_series/breadcrumb.ejs
+++ b/web/views/all_series/breadcrumb.ejs
@@ -43,12 +43,10 @@ style="display: flex; justify-content: space-between; align-items: center; overf
                   style="width: 100%; height: 100%;">
               </div>
             </div>
-          </div>
-          <div class="notranslate"
+          </div><div class="notranslate"
             style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 160px;">所有系列Wiki</div>
         </div>
-      </div>
-    </a></div><span style="margin-left: 2px; margin-right: 2px; color: rgba(55, 53, 47, 0.4);">/</span>
+      </div></a></div><span style="margin-left: 2px; margin-right: 2px; color: rgba(55, 53, 47, 0.4);">/</span>
 </div>
 <div style="flex-grow: 1; flex-shrink: 1;"></div>
 <div class="notion-focusable" role="button" tabindex="0"
