--- a/web/views/all_series/gujian_ol/content.ejs
+++ b/web/views/all_series/gujian_ol/content.ejs
@@ -1,6 +1,7 @@
-<div data-block-id="29857821-8bde-4fe4-8ec1-1ce689ee7a84" class="notion-selectable notion-column_list-block"
-    style="width: 100%; max-width: 1980px; align-self: center; margin-top: 1px; margin-bottom: 1px;">
-    <div style="display: flex;">
+<div class="container">
+
+    <div class="row">
+<!-- PVX -->
         <div
             style="padding-top: 12px; padding-bottom: 12px; flex-grow: 0; flex-shrink: 0; width: calc((100% - 92px) * 0.333333);">
             <div data-block-id="a605b9f8-c2ba-4cca-a2db-1068288e6f4e" class="notion-selectable notion-column-block"
@@ -20,10 +21,7 @@
                             <div style="display: flex;">
                                 <div class="notranslate" contenteditable="true" spellcheck="false" placeholder="List"
                                     data-content-editable-leaf="true"
-                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;">
-                                    <span style="font-weight:600" data-token-index="0" class="notion-enable-hover">PVX：
-                                    </span>
-                                </div>
+                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;"><span style="font-weight:600" data-token-index="0" class="notion-enable-hover">PVX：</span></div>
                             </div>
                             <div data-block-id="03064e32-2c0c-4029-8494-a51cf49a57b6"
                                 class="notion-selectable notion-divider-block"
@@ -42,8 +40,7 @@
                                     <div style="display: flex;">
                                         <div class="notranslate" contenteditable="true" spellcheck="false"
                                             placeholder=" " data-content-editable-leaf="true"
-                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;">
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;"><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="0" href="/5ef19a52328d476cb11c83f83dd447a8"><span
@@ -89,11 +86,10 @@
                                                 class="notion-link-token notion-enable-hover" target="_blank"
                                                 rel="noopener noreferrer" data-token-index="5"><span
                                                     style="border-bottom:0.05em solid;border-color:rgba(55,53,47,0.4);opacity:0.7"
-                                                    class="link-annotation-b1e4b010-1124-4419-b7b2-3943b8638572-1320912652">最新成就查询</span></a>
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                                    class="link-annotation-b1e4b010-1124-4419-b7b2-3943b8638572-1320912652">最新成就查询</span></a><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="7" href="/b87fd410788e4cc098fec49f65693c59"><span
+                                                data-token-index="7" href="/b87fd410788e4cc098fec49f65693c59"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="display:inline;width:1em;margin-right:0.2em;margin-bottom:0;white-space:nowrap;position:relative"><img
@@ -133,7 +129,7 @@
                                                 style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="11" href="/3743ee6002654aa2895f1c8972154359"><span
+                                                data-token-index="11" href="/3743ee6002654aa2895f1c8972154359"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="display:inline-block;width:1em;white-space:nowrap;position:relative;margin-right:0.2em;vertical-align:-0.15em"><img
@@ -148,8 +144,7 @@
                                                         </svg></span></span><span
                                                     style="border-bottom:0.05em solid rgba(55,53,47,0.25);font-weight:500"
                                                     class="notion-page-mention-token__title">绝版物品查询</span><span
-                                                    style="white-space:nowrap"></span></a>
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                                    style="white-space:nowrap"></span></a><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="13" href="/03e83aef93774bebae7d1317a3536ee7"><span
@@ -177,7 +172,7 @@
                                                 style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="15" href="/2f588e182ec34b08b656282ca75cfb28"><span
+                                                data-token-index="15" href="/2f588e182ec34b08b656282ca75cfb28"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="width:1.1em;display:inline-block;vertical-align:-0.15em;position:relative;margin-right:0.2em"><svg
@@ -233,9 +228,9 @@
                 </div>
             </div>
         </div>
-        <div
-            style="position: relative; width: 46px; flex-grow: 0; flex-shrink: 0; transition: opacity 200ms ease-out 0s; opacity: 0;">
-        </div>
+
+        <% include ../../common/blank_vertical.ejs%>
+<!-- PVE -->
         <div
             style="padding-top: 12px; padding-bottom: 12px; flex-grow: 0; flex-shrink: 0; width: calc((100% - 92px) * 0.333333);">
             <div data-block-id="654f5061-6de6-4b08-9a18-5360ec8851f9" class="notion-selectable notion-column-block"
@@ -255,10 +250,8 @@
                             <div style="display: flex;">
                                 <div class="notranslate" contenteditable="true" spellcheck="false" placeholder="List"
                                     data-content-editable-leaf="true"
-                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;">
-                                    <span style="font-weight:600" data-token-index="0"
-                                        class="notion-enable-hover">PVE：</span>
-                                </div>
+                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;"><span style="font-weight:600" data-token-index="0"
+                                        class="notion-enable-hover">PVE：</span></div>
                             </div>
                             <div data-block-id="97fc8807-70dc-42cb-b764-bec4fd19c104"
                                 class="notion-selectable notion-divider-block"
@@ -277,8 +270,7 @@
                                     <div style="display: flex;">
                                         <div class="notranslate" contenteditable="true" spellcheck="false"
                                             placeholder=" " data-content-editable-leaf="true"
-                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;">
-                                            <a style="background:rgb(251,228,228);vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;"><a style="background:rgb(251,228,228);vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="0" href="/c043bc4afb724c54a73b4df6df00fe20"><span
@@ -328,7 +320,7 @@
                                                 style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="5" href="/04f61300c2b54487ab31175c558f69d8"><span
+                                                data-token-index="5" href="/04f61300c2b54487ab31175c558f69d8"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="display:inline-block;width:1em;white-space:nowrap;position:relative;margin-right:0.2em;vertical-align:-0.15em"><img
@@ -343,8 +335,7 @@
                                                         </svg></span></span><span
                                                     style="border-bottom:0.05em solid rgba(55,53,47,0.25);font-weight:500"
                                                     class="notion-page-mention-token__title">烹饪食谱查询</span><span
-                                                    style="white-space:nowrap"></span></a>
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                                    style="white-space:nowrap"></span></a><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="7" href="/789f1b90a3c1434085668c4c7ad2d50a"><span
@@ -372,9 +363,9 @@
                 </div>
             </div>
         </div>
-        <div
-            style="position: relative; width: 46px; flex-grow: 0; flex-shrink: 0; transition: opacity 200ms ease-out 0s; opacity: 0;">
-        </div>
+
+        <% include ../../common/blank_vertical.ejs%>
+<!-- Other -->        
         <div
             style="padding-top: 12px; padding-bottom: 12px; flex-grow: 0; flex-shrink: 0; width: calc((100% - 92px) * 0.333333);">
             <div data-block-id="190745ca-903b-4694-8b52-7449c756d6e7" class="notion-selectable notion-column-block"
@@ -394,10 +385,7 @@
                             <div style="display: flex;">
                                 <div class="notranslate" contenteditable="true" spellcheck="false" placeholder="List"
                                     data-content-editable-leaf="true"
-                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;">
-                                    <span style="font-weight:600" data-token-index="0" class="notion-enable-hover">其他：
-                                    </span>
-                                </div>
+                                    style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px; text-align: left;"><span style="font-weight:600" data-token-index="0" class="notion-enable-hover">其他：</span></div>
                             </div>
                             <div data-block-id="78784fca-2d7d-4830-a59f-8a52cf7996de"
                                 class="notion-selectable notion-divider-block"
@@ -416,8 +404,7 @@
                                     <div style="display: flex;">
                                         <div class="notranslate" contenteditable="true" spellcheck="false"
                                             placeholder=" " data-content-editable-leaf="true"
-                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;">
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                            style="max-width: 100%; width: 100%; white-space: pre-wrap; word-break: break-word; caret-color: transparent; padding: 3px 2px;"><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="0" href="/6dc0ae0ff8b94b2a9bbbf9930d37163a"><span
@@ -464,7 +451,7 @@
                                                 style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="4" href="/b582d19c78da41e5b7959d3f7bcaf773"><span
+                                                data-token-index="4" href="/b582d19c78da41e5b7959d3f7bcaf773"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="display:inline-block;width:1em;white-space:nowrap;position:relative;margin-right:0.2em;vertical-align:-0.15em"><img
@@ -479,8 +466,7 @@
                                                         </svg></span></span><span
                                                     style="border-bottom:0.05em solid rgba(55,53,47,0.25);font-weight:500"
                                                     class="notion-page-mention-token__title">鱼点垂钓查询</span><span
-                                                    style="white-space:nowrap"></span></a>
-                                            <a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
+                                                    style="white-space:nowrap"></span></a><a style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
                                                 data-token-index="6" href="/b5cc43051e294013b85c5aa242b95ad9"><span
@@ -502,7 +488,7 @@
                                                 style="vertical-align:top;cursor:pointer;color:inherit;text-decoration:inherit;transition:all 100ms ease-in"
                                                 contenteditable="false"
                                                 class="notion-page-mention-token notion-text-mention-token notion-enable-hover"
-                                                data-token-index="8" href="/3-0-32449b7195eb4715afc3264e24cdb950"><span
+                                                data-token-index="8" href="/3-0-32449b7195eb4715afc3264e24cdb950"><br><span
                                                     style="white-space:nowrap"></span><span
                                                     style="white-space:nowrap"><span
                                                         style="width:1.1em;display:inline-block;vertical-align:-0.15em;position:relative;margin-right:0.2em"><svg
@@ -533,5 +519,8 @@
                 </div>
             </div>
         </div>
+
     </div>
+
+
 </div>
