--- a/web/views/all_series/gujian_ol/index.ejs
+++ b/web/views/all_series/gujian_ol/index.ejs
@@ -15,17 +15,12 @@
 
     <% include breadcrumb.ejs%>
     <div class="app-notion">
-      <% include body-p1.ejs%>
-      <% include body-p2.ejs%>
-      <% include body-p3.ejs%>
-      <% include body-p4.ejs%>
-      <% include body-p5.ejs%>
-      <% include body-p6.ejs%>
-      <% include body-p7.ejs%>
-      <% include ../common/footer.ejs%>
+      <% include bill.ejs%>
+      <% include welcome.ejs%>
+      <% include ../../common/footer.ejs%>
     </div>
-
-
+   
+    
 
 </body>
 <script src="/javascripts/jquery.min.js"></script>
