--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -6,6 +6,7 @@
     <%= title %>
   </title>
   <link rel="icon" href="../images/breadcrumb-1.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/notion.css">
 </head>
 
@@ -13,19 +14,15 @@
 
     <% include breadcrumb.ejs%>
     <div class="app-notion">
-        <% include body-p1.ejs%>
-        <% include body-p2.ejs%>
-        <% include body-p3.ejs%>
-        <% include body-p4.ejs%>
-        <% include body-p5.ejs%>
-        <% include body-p6.ejs%>
-        <% include body-p7.ejs%>
-       
-       
+        <% include bill.ejs%>
+        <% include welcome.ejs%>
+        <% include catalog.ejs%>
+        <% include common/footer.ejs%>
     </div>
 
 
 
 </body>
-
+<script src="/javascripts/jquery.min.js"></script>
+<script src="/javascripts/bootstrap.min.js"></script>
 </html>
